@startuml
top to bottom direction

namespace common {
    enum eView {
      Game
      Settings
    }
}

namespace app {
  class Manager

  interface IView {
    + join() : void
    + signal change(eView)
    + exit() : void
    + render() : void
    + type() const : eView
  }

  Manager ..> "*" IView
}

namespace gui {
  class Main
  class Menu

  interface IKeyEvent {
    + event() : SDL_KeyCode
  }

  interface IMenuLogic {
    + label(int) const : std::string
    + value(int) const : std::string
    + settingsCount() const : int
    + handleKey(int, keycode) : void
    + signal change(eView)
  }

  Menu ..|> app.IView
  Main ..|> app.IView
  Main ..> IKeyEvent
  Menu ..> IMenuLogic
  Menu ..> IKeyEvent
}

namespace menu {
    class General
    class Player

    General ..|> gui.IMenuLogic
    Player ..|> gui.IMenuLogic
}

namespace event {
    class KeyEvent

    KeyEvent ..|> gui.IKeyEvent
}

@enduml
